<resources>
    <string name="app_name">CampusConnect</string>
    <string name="formationUfrUniversity">%1s %2s</string>
<!--    <string name="remainingOverTotalPlaces">%1s places restantes sur %2s.</string>-->
    <plurals name="remainingOverTotalPlaces">
        <item quantity="one">%1$d place restante sur %2$d</item>
        <item quantity="other">%1$d places restantes sur %2$d</item>
    </plurals>
    <string-array name="subjectFullName">
        <item>note_math§note de Mathématiques</item>
        <item>note_fra§note de Francais</item>
        <item>note_pc§note de Physique-Chimie</item>
        <item>note_ang§note d\'Anglais</item>
        <item>note_philo§note de Philosophie</item>
        <item>note_svt§note de Sciences de la Vie et de la Terre</item>
        <item>note_mg§note de Mathématiques générales</item>
        <item>note_eo§note d\'Économie</item>
        <item>moyenne_bac§moyenne du baccalauréat</item>
    </string-array>
    <string name="and">et</string>
    <string name="or">ou</string>
    <string name="markGreaterThan">%1$s supérieure à %2$s</string>
    <string name="notTyped">Champ non renseigné</string>
    <string name="serie_du_bac">Série du BAC</string>
    <string name="moyenne_du_bac">Moyenne du BAC</string>
    <string name="filieres_souhaitees">Filières souhaitées</string>
    <string name="villes_de_preference">Villes de préference</string>
    <string name="chercher">Chercher</string>
    <string name="rechercher_une_formation">Rechercher une formation</string>
    <string name="university_status_label">Type d\'université:</string>
    <string name="university_status_private">Privée</string>
    <string name="university_status_public">Publique</string>
    <string name="search_formation_city_input_helper_text">Vous pouvez choisir jusqu\'à 10 villes</string>
    <string name="search_formation_formation_input_helper_text">Entrez des mots clés sur la filière, par exemple: biologie, mathématiques, …</string>
    <string name="all">Toutes</string>
    <string name="series">Series autorisées</string>
    <string name="places_restantes">Places restantes</string>
    <string name="conditions_particulieres">Conditions particulières</string>
    <string name="contraintes_particulieres">Contraintes particulières</string>
    <string name="no_particular_constraints">Aucunes conditions particulières</string>
    <string name="entretien">Entrétien</string>
    <string name="matieres_dominantes">Matières dominantes</string>
    <string name="matieres_importantes_de_la_terminale">Matières importantes de la terminale</string>
    <string name="niveau_de_sortie">Niveau de sortie</string>
    <string name="debouches">Débouches</string>
    <string name="informations_complementaires">Informations complémentaires</string>
    <string name="location_icon">Location icon</string>
    <string name="university_icon">University icon</string>
    <string name="item_empty_dataset_title">Oops!!! Aucune formation trouvée!!!</string>
    <string name="item_empty_dataset_sub_title">Veuillez verifier les mots-clés saisis.\nAugmentez le nombre series ou de villes sélectionnées.\nVous pouvez egalement reformuler vos mot-clés. Saisissez par exemple \'biologi\' au lieu de \'biologie\' afin de retrouver les fillières telles que \'Sciences Biologiques\' et \'Biologie Appliquée\'</string>
    <string name="formation_result_label">Résultat de la recherche</string>
    <string name="formation_result_header_formation_label">Filières:</string>
    <string name="formation_result_header_bac_type_label">Séries du BAC:</string>
    <string name="formation_result_header_towns_label">Villes:</string>
    <string name="formation_result_header_university_type_label">Universités:</string>
    <plurals name="formation_result_header_number_of_formations_label">
        <item quantity="one">%1$s filière trouvée</item>
        <item quantity="other">%1$s filières trouvées</item>
    </plurals>
</resources>