<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.robotane.campusconnect.ui.FormationsSearchViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen_common_very_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/dimen_common_xl"
                android:paddingEnd="@dimen/dimen_common_xl"
                android:paddingBottom="@dimen/dimen_common_very_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rechercher_une_formation"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_search_formation_filieres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_common_very_small"
                    android:layout_marginBottom="@dimen/dimen_common_very_small"
                    android:hint="@string/filieres_souhaitees"
                    app:helperText="@string/search_formation_formation_input_helper_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.formation}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_search_formation_serie_bac"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_common_very_small"
                    android:layout_marginBottom="@dimen/dimen_common_very_small"
                    android:hint="@string/serie_du_bac">

                    <MultiAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:text="@={viewmodel.bacType}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_search_formation_villes"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_common_very_small"
                    android:layout_marginBottom="@dimen/dimen_common_very_small"
                    android:hint="@string/villes_de_preference"
                    app:helperText="@string/search_formation_city_input_helper_text">

                    <MultiAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:text="@={viewmodel.towns}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_search_formation_university_status_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/university_status_label"
                        android:textAppearance="?attr/textAppearanceBodyLarge"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/fragment_search_formation_university_status_rdbtn_group"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:checkedButton="@={viewmodel.universityType}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_search_formation_university_status_label"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/fragment_search_formation_all_university_rdbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/university_status_all" />

                        <RadioButton
                            android:id="@+id/fragment_search_formation_public_university_rdbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/university_status_public" />

                        <RadioButton
                            android:id="@+id/fragment_search_formation_private_university_rdbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/university_status_private" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/fragment_search_formation_search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewmodel::onSearchButtonClick}"
                    android:text="@string/chercher"
                    app:icon="?android:attr/actionModeWebSearchDrawable"
                    app:iconGravity="textStart" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</layout>