<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.robotane.campusconnect.utils.FormationDetailsTextCreator" />
        <variable
            name="formation"
            type="com.robotane.campusconnect.data.FiliereOverviewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_filiere_carView"
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_common"
        android:layout_marginTop="@dimen/dimen_common_very_small"
        android:layout_marginEnd="@dimen/dimen_common"
        android:layout_marginBottom="@dimen/dimen_common_very_small"
        android:elevation="@dimen/dimen_common_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_filiere_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/item_filiere_ic_universite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/item_filiere_name_lbl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_report_image"
                    android:contentDescription="@string/university_icon" />

                <TextView
                    android:id="@+id/item_filiere_name_lbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_common_very_small"
                    android:layout_marginTop="@dimen/dimen_common_very_small"
                    android:layout_marginBottom="@dimen/dimen_common_very_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@{formation.nom}"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_filiere_ic_universite"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Sience Biologie" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/item_filiere_ufr_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/dimen_common_small"
                android:text='@{FormationDetailsTextCreator.ufrString(formation.ufr)}'
                tools:text="UFR/ST"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_constraintLayout" />

            <TextView
                android:id="@+id/item_filiere_universite_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_common_small"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:text='@{formation.nomUniversite.split(" - ")[0]}'
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_ufr_lbl"
                tools:text="Université Nazi-BONI" />

            <TextView
                android:id="@+id/item_filiere_conditions_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_common_small"
                android:layout_marginTop="@dimen/dimen_common_very_small"
                android:layout_marginEnd="@dimen/dimen_common_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/conditions_particulieres"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_universite_lbl"
                tools:text="Conditions particulières" />

            <TextView
                android:id="@+id/item_filiere_conditions_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_common_small"
                android:layout_marginEnd="@dimen/dimen_common_small"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:text='@{FormationDetailsTextCreator.conditionsString(formation.conditions)}'
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintBottom_toTopOf="@id/item_filiere_divider_bottom_lbl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_conditions_lbl"
                tools:text="The MaterialMe app is a mock sports-news app with very poor design implementation. You will fix it up to meet the design guidelines to create a delightful user experience! Below are screenshots of the app before and after the Material Design improvements." />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/item_filiere_divider_bottom_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_filiere_universite_ville_ic_location"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_conditions_text" />

            <ImageView
                android:id="@+id/item_filiere_universite_ville_ic_location"
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_filiere_universite_ville_lbl"
                app:layout_constraintTop_toBottomOf="@+id/item_filiere_divider_bottom_lbl"
                android:contentDescription="@string/location_icon" />

            <TextView
                android:id="@+id/item_filiere_universite_ville_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:minLines="1"
                android:text='@{formation.ville}'
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintBottom_toBottomOf="@+id/item_filiere_universite_ville_ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_filiere_universite_ville_ic_location"
                tools:text="5 places restantes." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>